Updated README with reason for this repository

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This git repository is for my Teamtreehouse.com projects and challenges.
+
+These files are "breadcrumbs" for Teamtreehouse project or challenge completions.
+
